# lymbo

./: .flake8  .gitignore  LICENSE  Makefile  README.md  build.yml  pyproject.toml  requirements-dev.txt
.github/workflows/: build.yml
demo/: demo.py  second.py
examples/: readme.py
lymbo/: __init__.py  __main__.py  cm.py  collect.py  color.py  config.py  env.py  exception.py  item.py  log.py  report.py  resource.py  resource_manager.py  ressource.py  run.py  ui.py
tests/: test_cm.py  test_collect.py  test_resource.py  test_run.py
tests/data_collect/: collect_a.py  collect_b.py
tests/data_resource/: cm.py  resource_nested.py  ressouce_a.py  ressouce_b.py
tests/data_run/: run_a.py  run_expected.py  run_status.py
